:bug: Fix issue with the profession / name getting cut off slightly on some characters

--- a/styles/src/layout/formatter.less
+++ b/styles/src/layout/formatter.less
@@ -13,7 +13,7 @@
 .center-txt { text-align: center !important; }
 
 .full-height { height: 100% !important; }
-
+.preserve-font { text-indent: 5px; }
 
 .pt0 { padding-top: 0 !important; }
 .pt1 { padding-top: .1rem; }
